syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/DebdipWritesCode/Munshiji/backend/pb";

message MetaData {
  string user_agent = 1;
  string client_ip = 2;
}

message LoginUserRequest {
  string email = 1;
  string password = 2;
}

message LoginUserResponse {
  User user = 1;
  string jwt_token = 2;
  MetaData metadata = 3;
}